# lsm6dsr

./: Cargo.toml  LICENCE-APACHE  LICENCE-MIT  README.md  notes.txt
src/: accelerometer.rs  commands.rs  gyroscope.rs  lib.rs
